results/SpecGenBench/0-shot/log-MulNested-2023_11_28_23_15_32.txt
public class MulNested {
    //@ requires true;
    //@ ensures \result == x * y;
    public static int mulNested(int x, int y) {
        int res = 0, m = x, n = y, sign = 1;
        if(x < 0){
            m = -x;
            sign = -sign;
        }
        if(y < 0){
            n = -y;
            sign = -sign;
        }
        //@ loop_invariant 0 <= i && i <= m;
        //@ loop_invariant res == (\sum int k; k < i; n);
        for(int i = 0; i < m; i++) {
            //@ loop_invariant 0 <= j && j <= n;
            //@ loop_invariant res == (\sum int k; k < i; n) + (\sum int k; k < j; 1);
            for(int j = 0; j < n; j++) {
                res = res + 1;
            }
        }
        //@ assert res == (\sum int k; k < m; n);
        //@ assert \result == sign * res;
        return sign * res;
    }
}
/home/max/Documents/JMLGPT/tmp/MulNested.java:24: error: A \result expression may not be in a assert clause
        //@ assert \result == sign * res;
                    ^
1 error

